# PlateFlex

./: .buildinfo  .gitignore  .travis.yml  README.md  api.html  classes.html  conf.html  estimate.html  genindex.html  getting_started.html  index.html  links.html  meson.build  objects.inv  plotting.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: deploy.yml
.travis/: github_deploy_key.enc
_sources/: classes.rst.txt  conf.rst.txt  getting_started.rst.txt  index.rst.txt  links.rst.txt  plotting.rst.txt
docs/: .buildinfo  api.html  classes.html  conf.html  conf.py  estimate.html  estimate.rst  genindex.html  getting_started.rst  index.html  index.rst  links.html  notebook1.html  notebooks.html  objects.inv  plotting.html  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: api.doctree  classes.doctree  conf.doctree  environment.pickle  estimate.doctree  index.doctree  links.doctree  plotting.doctree
docs/_build/html/: .buildinfo  api.html  classes.html  estimate.html  genindex.html  index.html  plotting.html  py-modindex.html  search.html
docs/_build/html/_sources/: links.rst.txt
docs/_sources/: api.rst.txt  classes.rst.txt  conf.rst.txt  estimate.rst.txt  index.rst.txt  plotting.rst.txt
plateflex/: __init__.py  classes.py  conf.py  doc.py  estimate.py  flexure.py  grids.py  plotting.py  utils.py  wavelet.py
plateflex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plateflex/examples/Notebooks/: Ex1_making_grids.ipynb  Ex2_wavelet_analysis.ipynb  Ex3_admittance_coherence.ipynb  Ex4_estimate_flex_parameters_cell.ipynb  Ex5_estimate_flex_parameters_grid.ipynb  Ex6_full_suite_North_America.ipynb  Ex7_full_suite_NW_Pacific.ipynb  example_na.py  example_na_parallel.py  test_fortran.py  test_plateflex_NA.py  test_plateflex_PAC.py
plateflex/examples/data/: retopo.txt
plateflex/examples/picture/: latex_math.tex
src/: cpwt.f90  cpwt_sub.f90
src/cpwt/: cpwt.f90  cpwt_sub.f90
src/flex/: flex.f90
